--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,15 @@ html {
 	color-scheme: light dark;
 }
 
+article {
+    border: red solid 2px;
+}
+#introduccion {
+    padding: 10rem 5rem;
+    margin: 5rem;
+    color: white;
+}
+
 .image {
 	width: 40vmin;
 	height: 56vmin;
