--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,9 @@ html {
 .home {
     height: 100vh;
     display: flex;
+    background-image: url(../img/home-background.jpg);
+    background-repeat: no-repeat;
+
     align-items: center;
     padding: 0 10%;
 }
@@ -210,10 +213,12 @@ html {
     position: absolute;
     bottom: 40px;
     width: 170px;
-
+    display: flex;
+    justify-content: space-between;
 }
 
 .home-sci a {
+    position: relative;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -224,7 +229,30 @@ html {
     border-radius: 50%;
     font-size: 20px;
     color: var(--hover-color);
+    z-index: 1;
+    overflow: hidden;
 }
+
+.home-sci a:hover {
+    color: var(--background-color);
+}
+
+.home-sci a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    z-index: -1;
+    transition: 0.3s;
+    background: var(--hover-color);
+}
+
+.home-sci a:hover::before {
+    height: 100%;
+}
+
 .image {
 	width: 40vmin;
 	height: 56vmin;
