--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ html {
     position: absolute;
     top: 0;
     right: 30px;
-    width: 500px;
+    width: 40%;
     height: 100%;
     background: transparent;
     transition: 3s;
