--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,9 @@
 :root {
-    --font-color: rgb(255,255,255);
-    --hover-color: rgb(40, 157, 199);
+	--font-color: rgb(255, 255, 255);
+	--hover-color: rgb(40, 157, 199);
 
-    --background-transparency: rgba(100,100,100,0.3);
-    --background-color:  rgb(0,14, 67);
+	--background-transparency: rgba(100, 100, 100, 0.3);
+	--background-color: rgb(0, 14, 67);
+
+	--hamburger-transparency: rgba(0, 14, 67, 0.8);
 }
