Haciendolo mas responsive v3.3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,6 +301,7 @@ html {
 	object-fit: cover;
 	width: 20vw;
 	border-radius: 10px;
+	object-position: 100% center;
 	border: var(--hover-color) solid 2px;
 }
 
@@ -311,12 +312,13 @@ html {
 	margin: 2rem;
 	justify-content: center;
 	left: 150%;
+	transform: translate(50%, 0%);
 }
 
 #wrapper {
 	margin: 2rem auto;
 	max-width: min(90%, 1400px);
-	overflow-inline: hidden;
+	overflow: hidden;
 	display: flex;
 	align-items: center;
 	border: var(--hover-color) solid 3px;
