Haciendolo mas responsive v3.6

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,10 @@ html {
 }
 
 #contactame {
+	height: 100vh;
 	background-image: url(../img/home-background.jpg);
+	background-size: auto;
+	background-repeat: repeat-y;
 }
 
 /* Hoja Home */
@@ -464,6 +467,34 @@ label a {
 
 /** Fin menu hamburguesa/*
 
+/** Comienzo la página de Contacto */
+
+.contactoContainer {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	border: red solid 4px;
+}
+
+.item {
+	width: min(90%, 820px);
+	height: 75vh;
+	background: var(--background-transparency);
+	border-radius: 20px;
+	box-shadow: 0 0 20px 10px var(--hamburger-transparency);
+	overflow: hidden;
+	display: grid;
+	grid-template-columns : repeat(2, 1fr);
+	z-index: 1000;
+}
+
+.contact {
+	background: var(--hover-color);
+}
+/** Fin página de Contacto*/
 
 /** Media queries */
 
