--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,7 +474,7 @@ label a {
 
 .contactoContainer {
 	width: 100%;
-	height: 100vh;
+	height:max-content;
 	display: flex;
 	justify-content: center;
 	margin: 1rem auto;
