--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ html {
 	font-size: 19px;
 	color: var(--font-color);
 	text-decoration: none;
-	font-weight: 00;
+	font-weight: 0;
 	letter-spacing: 1px;
 	z-index: 1;
 	overflow: hidden;
@@ -346,7 +346,7 @@ html {
 	background: var(--background-color);
 	position: relative;
 	color: white;
-	z-index: 100;
+	z-index: 1;
 	cursor: pointer;
 }
 
@@ -477,12 +477,12 @@ label a {
 	height:max-content;
 	display: flex;
 	justify-content: center;
-	margin: 1rem auto;
+	margin: 0.5rem auto;
 }
 
 .item {
 	width: min(90%, 820px);
-	height: 65vh;
+	height: 75vh;
 	border-radius: 20px;
 	box-shadow: 0 0 20px 10px var(--hamburger-transparency);
 	display: grid;
@@ -547,9 +547,9 @@ form {
 }
 .input-box {
 	position: relative;
-	height: 3rem;
+	height: 2.5rem;
 	width: 80%;
-	margin: 1rem auto;
+	margin: clamp(0.5rem, 2.5vh, 1.5rem) auto;
 }
 
 .input {
@@ -581,7 +581,9 @@ form {
 	left: 10px;
 	background: var(--hover-color);
 	font-size: 14px;
-	padding: 5px;
+	padding: 0px 5px;
+	
+	
 }
 
 textarea.input {
@@ -598,11 +600,34 @@ textarea.input {
 	margin: 0 auto;
 	border: var(--font-color) solid 2px;
 	outline: none;
-	background: var(--font-color);
+	background: transparent;
 	border-radius: 10px;
 	font-size: 1rem;
+	color: var(--font-color);
+	height: 2.5rem;
+	transition: 0.5s;
+}
+
+.btn:hover {
+	background-color: var(--font-color);;
 	color: var(--hover-color);
-	height: 3rem;
+}
+
+
+.btn::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 0;
+	z-index: -1;
+	transition: 0.5s;
+	background: red;
+}
+
+.btn:hover::before {
+	height: 100%;
 }
 
 /** Fin página de Contacto*/
