--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@ html {
 	object-fit: cover;
 	height: 50vh;
 	aspect-ratio: 5/8;
-	border-radius: 10px;
+	border-radius: 8px;
 	object-position: 100% center;
 	border: var(--hover-color) solid 2px;
 }
@@ -483,7 +483,7 @@ label a {
 .item {
 	width: min(90%, 820px);
 	height: 75vh;
-	border-radius: 20px;
+	border-radius: 10px;
 	box-shadow: 0 0 20px 10px var(--hamburger-transparency);
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -500,7 +500,7 @@ label a {
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem;
-	border-radius: 20px 0px 0px 20px;
+	border-radius: 10px 0px 0px 10px;
 	border: var(--hover-color) solid 3px;
 	transition: 1.5s;
 }
@@ -519,7 +519,7 @@ label a {
 } */
 
 .submit-form {
-	border-radius: 0px 20px 20px 0px;
+	border-radius: 0px 10px 10px 0px;
 	background: var(--hover-color);
 }
 
@@ -558,7 +558,7 @@ form {
 	width: 100%;
 	height: 100%;
 	background: transparent;
-	border-radius: 10px;
+	border-radius: 7px;
 	padding: 0.5rem;
 	font-size: 1rem;
 }
@@ -601,7 +601,7 @@ textarea.input {
 	border: var(--font-color) solid 2px;
 	outline: none;
 	background: transparent;
-	border-radius: 10px;
+	border-radius: 7px;
 	font-size: 1rem;
 	color: var(--font-color);
 	height: 2.5rem;
@@ -612,6 +612,7 @@ textarea.input {
 	background-color: var(--font-color);;
 	color: var(--hover-color);
 	font-size: 20px;
+	font-weight: 500;
 	letter-spacing: 5px;
 	box-shadow: var(--font-color) 0 0 15px 5px;
 }
@@ -677,7 +678,7 @@ textarea.input {
 	}
 
 	.submit-form {
-	border-radius: 20px;
+	border-radius: 10px;
 	background: var(--hover-color);
 }
 }
